--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "@babel/preset-typescript": "^7.3.3",
     "@openmrs/esm-error-handling": "^1.1.0",
     "@openmrs/react-root-decorator": "^2.0.0",
-    "@testing-library/react": "^9.1.3",
-    "@types/jest": "^24.0.18",
+    "@testing-library/jest-dom": "^5.7.0",
+    "@testing-library/react": "^9.5.0",
+    "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.161",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
@@ -81,12 +82,14 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
-    "@openmrs/esm-api": "^1.2.2",
-    "@openmrs/esm-module-config": "^1.2.0",
+    "@openmrs/esm-api": "^3.0.0",
+    "@openmrs/esm-module-config": "^2.2.0",
     "@openmrs/esm-styleguide": "^1.3.0",
-    "formik": "^2.1.5",
+    "i18next": "^19.4.2",
+    "lodash-es": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "yup": "^0.29.1"
+    "react-i18next": "^11.3.4",
+    "rxjs": "^6.6.2"
   }
 }
