--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@openmrs/esm-drugorder-app",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Drug order microfrontend for the OpenMRS SPA",
   "main": "dist/openmrs-esm-drugorder.js",
   "types": "src/index.ts",
   "license": "MIT",
   "homepage": "https://github.com/openmrs/openmrs-esm-drugorder#readme",
   "scripts": {
-    "start": "webpack-dev-server",
-    "start-https": "webpack-dev-server --https",
+    "start": "openmrs debug --importmap @",
     "build": "webpack --mode production",
     "lint": "eslint src --ext tsx",
     "prettier": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\"",
@@ -16,9 +15,9 @@
     "prepublishOnly": "npm run build",
     "test": "jest"
   },
-  "directories": {
-    "lib": "dist"
-  },
+  "keywords": [
+    "openmrs"
+  ],
   "browserslist": [
     "extends browserslist-config-openmrs"
   ],
@@ -51,6 +50,16 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/single-spa-react": "^2.12.0",
     "@types/webpack-env": "^1.15.1",
+    "@openmrs/esm-api": "^3.0.0",
+    "@openmrs/esm-extension-manager": "^0.1.1",
+    "@openmrs/esm-module-config": "^2.2.0",
+    "@openmrs/esm-patient-chart-widgets": "^1.0.3",
+    "@openmrs/esm-styleguide": "^1.3.0",
+    "i18next": "^19.4.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-i18next": "^11.3.4",
+    "rxjs": "^6.6.2",
     "@types/yup": "^0.29.3",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.9.0",
@@ -86,17 +95,19 @@
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@openmrs/esm-api": "^3.0.0",
     "@openmrs/esm-extension-manager": "^0.1.1",
     "@openmrs/esm-module-config": "^2.2.0",
     "@openmrs/esm-patient-chart-widgets": "^1.0.3",
     "@openmrs/esm-styleguide": "^1.3.0",
     "i18next": "^19.4.2",
-    "lodash-es": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-i18next": "^11.3.4",
     "rxjs": "^6.6.2"
+  },
+  "dependencies": {
+    "lodash-es": "^4.17.15"
   }
 }
