Added hidden peer dependencies

--- a/package.json
+++ b/package.json
@@ -38,14 +38,19 @@
   },
   "dependencies": {
     "@carbon/icons-react": "^10.18.0",
+    "@openmrs/react-root-decorator": "^3.3.1",
     "carbon-components-react": "^7.19.0",
-    "lodash-es": "^4.17.15"
+    "dayjs": "^1.8.16",
+    "lodash": "^4.17.19",
+    "lodash-es": "^4.17.15",
+    "single-spa-react": "^2.10.2",
+    "systemjs-webpack-interop": "^1.1.0"
   },
   "peerDependencies": {
-    "@openmrs/esm-error-handling": "^3.0.0",
     "@openmrs/esm-api": "^3.0.0",
-    "@openmrs/esm-extensions": "^3.0.0",
     "@openmrs/esm-config": "^3.0.0",
+    "@openmrs/esm-error-handling": "^3.0.0",
+    "@openmrs/esm-extensions": "^3.0.0",
     "@openmrs/esm-patient-chart-widgets": "^1.0.3",
     "@openmrs/esm-styleguide": "^3.0.0",
     "carbon-components": "^10.19.0",
@@ -68,7 +73,6 @@
     "@openmrs/esm-extensions": "^3.0.0",
     "@openmrs/esm-patient-chart-widgets": "^1.0.3",
     "@openmrs/esm-styleguide": "^3.0.0",
-    "@openmrs/react-root-decorator": "^3.3.1",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^9.5.0",
     "@types/carbon-components-react": "^7.10.9",
@@ -88,7 +92,6 @@
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.0",
-    "dayjs": "^1.8.16",
     "eslint": "^6.2.1",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-ts-react-important-stuff": "^1.0.0",
@@ -99,8 +102,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
-    "kremling": "^2.0.1",
-    "lodash": "^4.17.19",
     "openmrs": "^3.0.2",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
@@ -110,9 +111,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "rxjs": "^6.6.2",
-    "single-spa-react": "^2.10.2",
     "style-loader": "^1.0.0",
-    "systemjs-webpack-interop": "^1.1.0",
     "typescript": "^4.0.3",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
