Redesign of the drugorder widget (#8)
* Migrated files from patient-chart-widgets.

* Removed unused code from visit-button.

* Entirely removed dependencies to the visit and location widgets.

* Removed now unused members.

* Removed unused mocks.

* Added floating order basket button.

* Added Sass.

* Begin restructuring of project.

* Continue extracting the new active-medications.component.tsx.

* Redesigned the active medications table.

* Integrate medication table component into the summary page.

* Remove somewhat underused interface.

* Added pagination support.

* Enable navigation to the order basket page.

* Remove unused imports.

* Start work on the order basket.

* Continue work on the order basket search.

* Reworked suggestions and search results.

* Improved search in backend.

* Added search query parameter support.

* Removed unused imports.

* Documentation and translation updates.

* Extract search results into its own component.

* Continue component extraction.

* Refine search and enrich results with common-medication data.

* Show search result message when there are no results.

* Begun work on the order form.

* Added all required controls on the order form.

* Finished styling of the order form.

* Connect all form fields with the respective order field.

* Added TODO.

* Cleanup.

* Display the new orders in the order basket.

* Prepare API requests for NEW entries.

* Import less styles.

* Added free text dosage support.

* Dont allow negative durations.
Indicate that a duration of 0 means no duration.

* Removed obsolete suggestions popup. ;(

* Added pagination to search results.

* Improved search.

* Enable editing of previously added order basket items.

* Split up the order basket.

* Update search result styling.

* Set min value for prescription refills.

* Set min value for prescription refills.
Update durationInput logic to correctly u

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "homepage": "https://github.com/openmrs/openmrs-esm-drugorder#readme",
   "scripts": {
-    "start": "openmrs debug --importmap @",
+    "start": "openmrs debug --run-project",
     "build": "webpack --mode production",
     "lint": "eslint src --ext tsx",
     "prettier": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\"",
@@ -47,12 +47,12 @@
     "systemjs-webpack-interop": "^1.1.0"
   },
   "peerDependencies": {
-    "@openmrs/esm-api": "^3.0.0",
-    "@openmrs/esm-config": "^3.0.0",
-    "@openmrs/esm-error-handling": "^3.0.0",
-    "@openmrs/esm-extensions": "^3.0.0",
-    "@openmrs/esm-patient-chart-widgets": "^1.0.3",
-    "@openmrs/esm-styleguide": "^3.0.0",
+    "@openmrs/esm-api": "^3.0.5",
+    "@openmrs/esm-config": "^3.0.5",
+    "@openmrs/esm-context": "^3.0.5",
+    "@openmrs/esm-error-handling": "^3.0.5",
+    "@openmrs/esm-extensions": "^3.0.5",
+    "@openmrs/esm-styleguide": "^3.0.5",
     "carbon-components": "^10.19.0",
     "carbon-icons": "^7.0.7",
     "i18next": "^19.4.2",
@@ -67,12 +67,12 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@openmrs/esm-api": "^3.0.0",
-    "@openmrs/esm-config": "^3.0.0",
-    "@openmrs/esm-error-handling": "^3.0.0",
-    "@openmrs/esm-extensions": "^3.0.0",
-    "@openmrs/esm-patient-chart-widgets": "^1.0.3",
-    "@openmrs/esm-styleguide": "^3.0.0",
+    "@openmrs/esm-api": "^3.0.5",
+    "@openmrs/esm-config": "^3.0.5",
+    "@openmrs/esm-context": "^3.0.5",
+    "@openmrs/esm-error-handling": "^3.0.5",
+    "@openmrs/esm-extensions": "^3.0.5",
+    "@openmrs/esm-styleguide": "^3.0.5",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^9.5.0",
     "@types/carbon-components-react": "^7.10.9",
@@ -92,17 +92,18 @@
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.0",
-    "eslint": "^6.2.1",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-config-ts-react-important-stuff": "^1.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-config-ts-react-important-stuff": "^3.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "husky": "^3.0.4",
     "i18next": "^19.4.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
-    "openmrs": "^3.0.2",
+    "node-sass": "^4.14.1",
+    "openmrs": "^3.0.5",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
@@ -111,8 +112,10 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "rxjs": "^6.6.2",
+    "sass-loader": "^10.0.2",
     "style-loader": "^1.0.0",
     "typescript": "^4.0.3",
+    "unistore": "^3.5.2",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
