Updated to the latest app shell

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@openmrs/esm-drugorder-app",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "Drug order microfrontend for the OpenMRS SPA",
-  "main": "dist/openmrs-esm-drugorder.js",
+  "main": "dist/openmrs-esm-drugorder-app.js",
   "types": "src/index.ts",
   "license": "MIT",
   "homepage": "https://github.com/openmrs/openmrs-esm-drugorder#readme",
@@ -38,21 +38,18 @@
   },
   "dependencies": {
     "@carbon/icons-react": "^10.18.0",
-    "@openmrs/react-root-decorator": "^3.3.1",
     "carbon-components-react": "^7.19.0",
     "dayjs": "^1.8.16",
-    "lodash": "^4.17.19",
     "lodash-es": "^4.17.15",
-    "single-spa-react": "^2.10.2",
     "systemjs-webpack-interop": "^1.1.0"
   },
   "peerDependencies": {
-    "@openmrs/esm-api": "^3.0.8",
-    "@openmrs/esm-config": "^3.0.8",
-    "@openmrs/esm-context": "^3.0.8",
-    "@openmrs/esm-error-handling": "^3.0.8",
-    "@openmrs/esm-extensions": "^3.0.8",
-    "@openmrs/esm-styleguide": "^3.0.8",
+    "@openmrs/esm-api": "^3.1.5",
+    "@openmrs/esm-config": "^3.1.5",
+    "@openmrs/esm-error-handling": "^3.1.5",
+    "@openmrs/esm-extensions": "^3.1.5",
+    "@openmrs/esm-react-utils": "^3.1.5",
+    "@openmrs/esm-styleguide": "^3.1.5",
     "carbon-components": "^10.19.0",
     "carbon-icons": "^7.0.7",
     "i18next": "^19.4.2",
@@ -67,12 +64,12 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@openmrs/esm-api": "^3.0.8",
-    "@openmrs/esm-config": "^3.0.8",
-    "@openmrs/esm-context": "^3.0.8",
-    "@openmrs/esm-error-handling": "^3.0.8",
-    "@openmrs/esm-extensions": "^3.0.8",
-    "@openmrs/esm-styleguide": "^3.0.8",
+    "@openmrs/esm-api": "^3.1.5",
+    "@openmrs/esm-config": "^3.1.5",
+    "@openmrs/esm-error-handling": "^3.1.5",
+    "@openmrs/esm-extensions": "^3.1.5",
+    "@openmrs/esm-react-utils": "^3.1.5",
+    "@openmrs/esm-styleguide": "^3.1.5",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^9.5.0",
     "@types/carbon-components-react": "^7.10.9",
@@ -103,7 +100,7 @@
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "node-sass": "^4.14.1",
-    "openmrs": "^3.0.8",
+    "openmrs": "^3.1.5",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
