--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "homepage": "https://github.com/openmrs/openmrs-esm-drugorder#readme",
   "scripts": {
     "start": "openmrs debug --run-project",
+    "serve": "webpack-dev-server",
+    "debug": "npm run serve",
     "build": "webpack --mode production",
     "lint": "eslint src --ext tsx",
     "prettier": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\"",
@@ -44,12 +46,12 @@
     "systemjs-webpack-interop": "^1.1.0"
   },
   "peerDependencies": {
-    "@openmrs/esm-api": "^3.1.5",
-    "@openmrs/esm-config": "^3.1.5",
-    "@openmrs/esm-error-handling": "^3.1.5",
-    "@openmrs/esm-extensions": "^3.1.5",
-    "@openmrs/esm-react-utils": "^3.1.5",
-    "@openmrs/esm-styleguide": "^3.1.5",
+    "@openmrs/esm-api": "3.x",
+    "@openmrs/esm-config": "3.x",
+    "@openmrs/esm-error-handling": "3.x",
+    "@openmrs/esm-extensions": "3.x",
+    "@openmrs/esm-react-utils": "3.x",
+    "@openmrs/esm-styleguide": "3.x",
     "carbon-components": "^10.19.0",
     "carbon-icons": "^7.0.7",
     "i18next": "^19.4.2",
@@ -64,12 +66,12 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@openmrs/esm-api": "^3.1.5",
-    "@openmrs/esm-config": "^3.1.5",
-    "@openmrs/esm-error-handling": "^3.1.5",
-    "@openmrs/esm-extensions": "^3.1.5",
-    "@openmrs/esm-react-utils": "^3.1.5",
-    "@openmrs/esm-styleguide": "^3.1.5",
+    "@openmrs/esm-api": "^3.1.6",
+    "@openmrs/esm-config": "^3.1.6",
+    "@openmrs/esm-error-handling": "^3.1.6",
+    "@openmrs/esm-extensions": "^3.1.6",
+    "@openmrs/esm-react-utils": "^3.1.6",
+    "@openmrs/esm-styleguide": "^3.1.6",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^9.5.0",
     "@types/carbon-components-react": "^7.10.9",
@@ -100,7 +102,7 @@
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "node-sass": "^4.14.1",
-    "openmrs": "^3.1.5",
+    "openmrs": "^3.1.6",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
