Alignment and Refactoring (#17)
* Optimizations and adjustments

* Optimizations and adjustments

* Optimizations and adjustments

* Switched to use framework

* Updated dependencies

* Improved build

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serve": "webpack-dev-server",
     "debug": "npm run serve",
     "build": "webpack --mode production",
+    "analyze": "webpack --mode=production --env.analyze=true",
     "lint": "eslint src --ext tsx",
     "prettier": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\"",
     "typescript": "tsc",
@@ -41,25 +42,17 @@
   },
   "dependencies": {
     "@carbon/icons-react": "^10.18.0",
-    "carbon-components-react": "^7.19.0",
-    "dayjs": "^1.8.16",
+    "carbon-components-react": "^7.25.0",
     "lodash-es": "^4.17.15",
     "systemjs-webpack-interop": "^1.1.0"
   },
   "peerDependencies": {
-    "@openmrs/esm-api": "3.x",
-    "@openmrs/esm-config": "3.x",
-    "@openmrs/esm-error-handling": "3.x",
-    "@openmrs/esm-extensions": "3.x",
-    "@openmrs/esm-react-utils": "3.x",
-    "@openmrs/esm-styleguide": "3.x",
+    "@openmrs/esm-framework": "3.x",
     "carbon-components": "^10.19.0",
     "carbon-icons": "^7.0.7",
-    "i18next": "^19.4.2",
+    "dayjs": "^1.8.16",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-i18next": "^11.3.4",
-    "rxjs": "^6.6.2"
+    "react-i18next": "^11.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -67,12 +60,8 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@openmrs/esm-api": "^3.1.8",
-    "@openmrs/esm-config": "^3.1.8",
-    "@openmrs/esm-error-handling": "^3.1.8",
-    "@openmrs/esm-extensions": "^3.1.8",
-    "@openmrs/esm-react-utils": "^3.1.8",
-    "@openmrs/esm-styleguide": "^3.1.8",
+    "@babel/runtime": "^7.12.13",
+    "@openmrs/esm-framework": "next",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^9.5.0",
     "@types/carbon-components-react": "^7.10.9",
@@ -92,6 +81,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.0",
+    "dayjs": "^1.8.16",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.13.0",
     "eslint-config-ts-react-important-stuff": "^3.0.0",
@@ -103,7 +93,7 @@
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "node-sass": "^4.14.1",
-    "openmrs": "^3.1.8",
+    "openmrs": "next",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
@@ -117,6 +107,7 @@
     "typescript": "^4.0.3",
     "unistore": "^3.5.2",
     "webpack": "^4.39.2",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
   }
