--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "homepage": "https://github.com/UCSF-IGHS/openmrs-esm-ohri#readme",
   "scripts": {
-    "start": "openmrs debug --run-project",
-    "serve": "webpack-dev-server",
+    "start": "openmrs develop",
+    "serve": "webpack serve --mode=development",
     "debug": "npm run serve",
     "build": "webpack --mode production",
     "analyze": "webpack --mode=production --env.analyze=true",
@@ -107,9 +107,9 @@
     "style-loader": "^1.0.0",
     "typescript": "^4.0.3",
     "unistore": "^3.5.2",
-    "webpack": "^4.39.2",
+    "webpack": "^5.36.2",
     "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
