--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "typescript": "tsc",
     "prepublishOnly": "npm run build",
     "test": "jest --passWithNoTests",
-    "coverage": "npm test -- --coverage",
-    "test:badges": "npm run test:coverage && jest-coverage-badges--output './badges' "
+    "coverage": "npm test -- --coverage"
   },
   "browserslist": [
     "extends browserslist-config-openmrs"
@@ -44,14 +43,10 @@
   "dependencies": {
     "@carbon/icons-react": "^10.18.0",
     "carbon-components-react": "^7.25.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "formik": "^2.2.6",
-    "jest-coverage-badges": "^1.1.2",
+    "yup": "^0.29.1",
     "lodash-es": "^4.17.15",
-    "react-test-renderer": "^16.9.0",
-    "systemjs-webpack-interop": "^1.1.0",
-    "yup": "^0.29.1"
+    "systemjs-webpack-interop": "^1.1.0"
   },
   "peerDependencies": {
     "@openmrs/esm-framework": "3.x",
@@ -81,7 +76,6 @@
     "@types/single-spa-react": "^2.12.0",
     "@types/webpack-env": "^1.15.1",
     "@types/yup": "^0.29.3",
-    "@typescript-eslint/parser": "^4.26.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
