--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: "14.x"
       - run: npm install
       - run: npm run lint
-      - run: npm run coverage
+#       - run: npm run coverage
       - run: npm run typescript
       - run: npm run build --if-present
       - name: Upload Artifacts
