--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "formik": "^2.2.6",
     "yup": "^0.29.1",
     "lodash-es": "^4.17.15",
+    "moment": "^2.29.1",
     "systemjs-webpack-interop": "^1.1.0"
   },
   "peerDependencies": {
