--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -100,46 +100,46 @@ jobs:
       #     data: '{ "service":"${{ env.ESM_NAME }}","url":"https://spa-modules.nyc3.digitaloceanspaces.com/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
       #     customHeaders: '{ "Accept": "application/json", "Content-Type": "application/json" }'
 
-  # pre_release:
-  #   runs-on: ubuntu-latest
+  pre_release:
+    runs-on: ubuntu-latest
 
-  #   needs: build
+    needs: build
 
-  #   if: ${{ github.event_name == 'push' }}
+    if: ${{ github.event_name == 'push' }}
 
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Download Artifacts
-  #       uses: actions/download-artifact@v2
-  #     - name: Use Node.js
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: "14.x"
-  #         registry-url: "https://registry.npmjs.org"
-  #     - run: npm install
-  #     - run: sed -i -e "s/\(\"version\":\\s\+\"\([0-9]\+\.\?\)\+\)/\1-pre.${{ github.run_number }}/" 'package.json'
-  #     - run: npm publish --access public --tag next
-  #       env:
-  #         NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: "14.x"
+          registry-url: "https://registry.npmjs.org"
+      - run: npm install
+      - run: sed -i -e "s/\(\"version\":\\s\+\"\([0-9]\+\.\?\)\+\)/\1-pre.${{ github.run_number }}/" 'package.json'
+      - run: npm publish --access public --tag next
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
-#   release:
-#     runs-on: ubuntu-latest
+  release:
+    runs-on: ubuntu-latest
 
-#     needs: deploy
+    needs: deploy
 
-#     # steps:
-#     #   - uses: actions/checkout@v2
-#     #   - name: Download Artifacts
-#     #     uses: actions/download-artifact@v2
-#     #   - name: Use Node.js
-#     #     uses: actions/setup-node@v1
-#     #     with:
-#     #       node-version: "14.x"
-#     #       registry-url: 'https://registry.npmjs.org'
-#     #   - run: npm install
-#     #   - run: npm publish --access public
-#     #     env:
-#     #       NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }
+    # steps:
+    #   - uses: actions/checkout@v2
+    #   - name: Download Artifacts
+    #     uses: actions/download-artifact@v2
+    #   - name: Use Node.js
+    #     uses: actions/setup-node@v1
+    #     with:
+    #       node-version: "14.x"
+    #       registry-url: 'https://registry.npmjs.org'
+    #   - run: npm install
+    #   - run: npm publish --access public
+    #     env:
+    #       NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }
 
 #     steps:
 #       # Runs a set of commands using the runners shell
