--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -127,19 +127,19 @@ jobs:
 
     needs: deploy
 
-    # steps:
-    #   - uses: actions/checkout@v2
-    #   - name: Download Artifacts
-    #     uses: actions/download-artifact@v2
-    #   - name: Use Node.js
-    #     uses: actions/setup-node@v1
-    #     with:
-    #       node-version: "14.x"
-    #       registry-url: 'https://registry.npmjs.org'
-    #   - run: npm install
-    #   - run: npm publish --access public
-    #     env:
-    #       NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: "14.x"
+          registry-url: 'https://registry.npmjs.org'
+      - run: npm install
+      - run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }
 
 #     steps:
 #       # Runs a set of commands using the runners shell
