--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -71,12 +71,10 @@ jobs:
           host: ${{ secrets.HISTAC_HOST }}
           username: ${{ secrets.HISTAC_USERNAME }}
           port: ${{ secrets.HISTAC_PORT }}
-#           password: ${{ secrets.HISTAC_PASSWORD }}
           key: ${{ secrets.HISTAC_KEY }}
           passphrase: ${{ secrets.HISTAC_PASSPHRASE }}
           proxy_port: ${{ secrets.HISTAC_PROXY_PORT }}
           source: "deploy_dev.tar"
-#           target: "dist_latest"
           target: "/usr/share/tomcat/"
           debug: true  
       
@@ -90,31 +88,11 @@ jobs:
             privateKey: ${{ secrets.HISTAC_KEY}}
             port: ${{ secrets.HISTAC_PORT }}
             proxy_port: ${{ secrets.HISTAC_PROXY_PORT }}
-      # - name: Publish to Digital Ocean
-      #   uses: jakejarvis/s3-sync-action@master
-      #   with:
-      #     args: --acl public-read --follow-symlinks --cache-control "max-age=31536000"
-      #   env:
-      #     AWS_S3_BUCKET: ${{ secrets.DIGITAL_OCEAN_SPACES_BUCKET }}
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.DIGITAL_OCEAN_SPACES_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.DIGITAL_OCEAN_SPACES_ACCESS_KEY }}
-      #     AWS_S3_ENDPOINT: ${{ secrets.DIGITAL_OCEAN_SPACES_ENDPOINT }}
-      #     SOURCE_DIR: "dist"
-      
-      # - name: Update Importmap
-      #   uses: fjogeleit/http-request-action@master
-      #   with:
-      #     url: http://${{ secrets.DEPLOYER_HOST }}/services?env=prod
-      #     method: "PATCH"
-      #     username: ${{ secrets.DEPLOYER_USERNAME }}
-      #     password: ${{ secrets.DEPLOYER_PASSWORD }}
-      #     data: '{ "service":"${{ env.ESM_NAME }}","url":"https://spa-modules.nyc3.digitaloceanspaces.com/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
-      #     customHeaders: '{ "Accept": "application/json", "Content-Type": "application/json" }'
 
   pre_release:
     runs-on: ubuntu-latest
 
-    needs: build
+    needs: deploy
 
     if: ${{ github.event_name == 'push' }}
 
@@ -129,6 +107,7 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - run: npm install
       - run: sed -i -e "s/\(\"version\":\\s\+\"\([0-9]\+\.\?\)\+\)/\1-pre.${{ github.run_number }}/" 'package.json'
+      - run: npm run build --if-present
       - run: npm publish --access public --tag next
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
