--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@openmrs/esm-ohri-app",
-  "version": "0.5.1",
+  "name": "openmrs-esm-ohri-form",
+  "version": "0.5.2",
   "description": "A custom microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-esm-ohri-app.js",
   "main": "src/index.ts",
