--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,7 +45,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    needs: build
+    needs: pre_release
 
     if: ${{ github.event_name == 'push' }}
 
@@ -92,7 +92,7 @@ jobs:
   pre_release:
     runs-on: ubuntu-latest
 
-    needs: deploy
+    needs: build
 
     if: ${{ github.event_name == 'push' }}
 
