--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,11 +5,7 @@ on:
     tags:
       - '*'
     branches:
-      - master
-      - staging
-      - demo
-      - dev
-      - working 
+      - '*' 
   pull_request:
     branches: [master]
     types: [opened, synchronize, reopened, closed]
@@ -46,7 +42,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    needs: build
+    needs: pre-release
 
     if: ${{ github.event_name == 'push' }}
 
@@ -77,7 +73,7 @@ jobs:
 
     needs: build
 
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.ref == 'dev' }}
 
     steps:
       - uses: actions/checkout@v2
