--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,6 +6,9 @@ on:
       - '*'
     branches:
       - '*' 
+      # Adding the feature branch to test the logic before merging
+      - feature/ohri-79-development-enviornment 
+
   pull_request:
     branches: [master]
     types: [opened, synchronize, reopened, closed]
@@ -60,7 +63,7 @@ jobs:
       - uses: garygrossgarten/github-action-ssh@release
         name: Run the Update MicroFronEnd Script
         with:
-            command: cd /usr/share/tomcat/microfrontends/dev && sh update_microfrontends.sh
+            command: cd /usr/share/tomcat/microfrontends/working && sh update_microfrontends.sh
             host: ${{ secrets.HISTAC_HOST }}
             username: ${{ secrets.HISTAC_USERNAME }}
             passphrase: ${{ secrets.HISTAC_PASSPHRASE }}
@@ -72,8 +75,13 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: build
+    
 
-    if: ${{ github.ref == 'dev' }}
+    # Commenting to test feature branch scenario
+    # if: ${{ github.ref == 'dev' }}
+
+    # Adding the feature branch to test the logic before merging
+    if: ${{ github.ref == 'refs/heads/working' }} 
 
     steps:
       - uses: actions/checkout@v2
