--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,7 +45,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    needs: pre-release
+    needs: pre_release
 
     if: ${{ github.event_name == 'push' }}
 
