--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^9.5.0",
     "@types/carbon-components-react": "^7.10.9",
+    "carbon-components": "^10.19.0",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.161",
     "@types/react": "^16.9.2",
