--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -81,7 +81,8 @@ jobs:
     # if: ${{ github.ref == 'dev' }}
 
     # Adding the feature branch to test the logic before merging
-    if: ${{ github.ref == 'refs/heads/working' }} 
+    # if: ${{ github.ref == 'refs/heads/working' }} 
+    if: ${{ github.event_name == 'push' }}
 
     steps:
       - uses: actions/checkout@v2
@@ -101,9 +102,11 @@ jobs:
   working:
     runs-on: ubuntu-latest
 
-    needs: build
+    needs: pre_release 
     
-    if: ${{ github.ref == 'refs/heads/working' }} 
+    # Adding the feature branch to test the logic before merging
+    # if: ${{ github.ref == 'refs/heads/working' }} 
+    if: ${{ github.event_name == 'push' }}
 
     steps:
       - uses: actions/checkout@v2
@@ -119,4 +122,15 @@ jobs:
       - run: npm publish --access public --tag next
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+      # Update the Microfrontends to reflect what we have in the Working branch
+      - uses: garygrossgarten/github-action-ssh@release
+        name: Run the Update MicroFronEnd Script
+        with:
+            command: cd /usr/share/tomcat/microfrontends/working && sh update_microfrontends.sh
+            host: ${{ secrets.HISTAC_HOST }}
+            username: ${{ secrets.HISTAC_USERNAME }}
+            passphrase: ${{ secrets.HISTAC_PASSPHRASE }}
+            privateKey: ${{ secrets.HISTAC_KEY}}
+            port: ${{ secrets.HISTAC_PORT }}
+            proxy_port: ${{ secrets.HISTAC_PROXY_PORT }}
   
