--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -102,9 +102,11 @@ jobs:
   working:
     runs-on: ubuntu-latest
 
-    needs: build
+    needs: pre_release 
     
-    if: ${{ github.ref == 'refs/heads/working' }} 
+    # Adding the feature branch to test the logic before merging
+    # if: ${{ github.ref == 'refs/heads/working' }} 
+    if: ${{ github.event_name == 'push' }}
 
     steps:
       # Update the Microfrontends to reflect what we have in the Working branch
