--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,9 +45,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    needs: build
+    needs: pre_release
 
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.ref == 'refs/heads/dev' }} 
 
     steps:
       - name: Download Artifacts
@@ -60,26 +60,6 @@ jobs:
           mkdir -p dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}
           mv dist/*.* dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/
           # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          mkdir ../build
-          cp -TR . ../build
-          tar -cvf deploy_dev.tar ../build/
-      - uses: appleboy/scp-action@v0.1.1
-        name: SCP file via ssh password to Transfer Files Upload Artifacts to Dev Server
-        with: 
-          host: ${{ secrets.HISTAC_HOST }}
-          username: ${{ secrets.HISTAC_USERNAME }}
-          port: ${{ secrets.HISTAC_PORT }}
-#           password: ${{ secrets.HISTAC_PASSWORD }}
-          key: ${{ secrets.HISTAC_KEY }}
-          passphrase: ${{ secrets.HISTAC_PASSPHRASE }}
-          proxy_port: ${{ secrets.HISTAC_PROXY_PORT }}
-          source: "deploy_dev.tar"
-#           target: "dist_latest"
-          target: "/usr/share/tomcat/"
-          debug: true  
-      
       - uses: garygrossgarten/github-action-ssh@release
         name: Run the Update MicroFronEnd Script
         with:
@@ -88,34 +68,19 @@ jobs:
             username: ${{ secrets.HISTAC_USERNAME }}
             passphrase: ${{ secrets.HISTAC_PASSPHRASE }}
             privateKey: ${{ secrets.HISTAC_KEY}}
-            port: ${{ secrets.HISTAC_PORT }}
-            proxy_port: ${{ secrets.HISTAC_PROXY_PORT }}
-      # - name: Publish to Digital Ocean
-      #   uses: jakejarvis/s3-sync-action@master
-      #   with:
-      #     args: --acl public-read --follow-symlinks --cache-control "max-age=31536000"
-      #   env:
-      #     AWS_S3_BUCKET: ${{ secrets.DIGITAL_OCEAN_SPACES_BUCKET }}
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.DIGITAL_OCEAN_SPACES_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.DIGITAL_OCEAN_SPACES_ACCESS_KEY }}
-      #     AWS_S3_ENDPOINT: ${{ secrets.DIGITAL_OCEAN_SPACES_ENDPOINT }}
-      #     SOURCE_DIR: "dist"
-      
-      # - name: Update Importmap
-      #   uses: fjogeleit/http-request-action@master
-      #   with:
-      #     url: http://${{ secrets.DEPLOYER_HOST }}/services?env=prod
-      #     method: "PATCH"
-      #     username: ${{ secrets.DEPLOYER_USERNAME }}
-      #     password: ${{ secrets.DEPLOYER_PASSWORD }}
-      #     data: '{ "service":"${{ env.ESM_NAME }}","url":"https://spa-modules.nyc3.digitaloceanspaces.com/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/${{ env.JS_NAME }}" }'
-      #     customHeaders: '{ "Accept": "application/json", "Content-Type": "application/json" }'
-
+            port: ${{ secrets.HISTAC_PORT }} 
+     
   pre_release:
     runs-on: ubuntu-latest
 
     needs: build
+    
 
+    # Commenting to test feature branch scenario
+    # if: ${{ github.ref == 'dev' }}
+
+    # Adding the feature branch to test the logic before merging
+    # if: ${{ github.ref == 'refs/heads/working' }} 
     if: ${{ github.event_name == 'push' }}
 
     steps:
@@ -133,64 +98,23 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
-  release:
+  working:
     runs-on: ubuntu-latest
 
-    needs: deploy
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: "14.x"
-          registry-url: 'https://registry.npmjs.org'
-      - run: npm install
-      - run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          mkdir ../build
-          cp -TR . ../build
-          tar -cvf deploy_dev.tar ../build/
-      - uses: appleboy/scp-action@v0.1.1
-        name: SCP file via ssh password to Transfer Files Upload Artifacts to DO
-        with: 
-          host: ${{ secrets.DIGITAL_OCEAN_HOST }}
-          username: ${{ secrets.DIGITAL_OCEAN_USERNAME }}
-          port: ${{ secrets.DIGITAL_OCEAN_PORT }}
-          password: ${{ secrets.DIGITAL_OCEAN_PASSWORD }}
-          # key: ${{ secrets.KEY }}
-          source: "deploy_dev.tar"
-          target: "dist_latest"
-          debug: true
-
-  test:
-    runs-on: ubuntu-latest
-
-    needs: deploy
+    needs: pre_release 
     
+    # Adding the feature branch to test the logic before merging
+    # if: ${{ github.ref == 'refs/heads/working' }} 
+    if: ${{ github.event_name == 'push' }}
+
     steps:
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          mkdir ../build
-          cp -TR . ../build
-          tar -cvf deploy_dev.tar ../build/
-      - uses: appleboy/scp-action@v0.1.1
-        name: SCP file via ssh password to Transfer Files Upload Artifacts to DO
-        with: 
-          host: ${{ secrets.HISTAC_HOST }}
-          username: ${{ secrets.HISTAC_USERNAME }}
-          port: ${{ secrets.HISTAC_PORT }}
-#           password: ${{ secrets.HISTAC_PASSWORD }}
-          key: ${{ secrets.HISTAC_KEY }}
-          passphrase: ${{ secrets.HISTAC_PASSPHRASE }}
-          proxy_port: ${{ secrets.HISTAC_PROXY_PORT }}
-          source: "deploy_dev.tar"
-          target: "dist_latest"
-          debug: true     
+      # Update the Microfrontends to reflect what we have in the Working branch
+      - uses: garygrossgarten/github-action-ssh@release
+        name: Run the Update MicroFronEnd Script
+        with:
+            command: cd /usr/share/tomcat/microfrontends/working && sh update_microfrontends.sh
+            host: ${{ secrets.HISTAC_HOST }}
+            username: ${{ secrets.HISTAC_USERNAME }}
+            passphrase: ${{ secrets.HISTAC_PASSPHRASE }}
+            privateKey: ${{ secrets.HISTAC_KEY}}
+            port: ${{ secrets.HISTAC_PORT }} 
