--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,7 +47,7 @@ jobs:
 
     needs: pre_release
 
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.ref == 'refs/heads/dev' }} 
 
     steps:
       - name: Download Artifacts
@@ -60,24 +60,6 @@ jobs:
           mkdir -p dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}
           mv dist/*.* dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/
           # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          mkdir ../build
-          cp -TR . ../build
-          tar -cvf deploy_dev.tar ../build/
-      - uses: appleboy/scp-action@v0.1.1
-        name: SCP file via ssh password to Transfer Files Upload Artifacts to Dev Server
-        with: 
-          host: ${{ secrets.HISTAC_HOST }}
-          username: ${{ secrets.HISTAC_USERNAME }}
-          port: ${{ secrets.HISTAC_PORT }}
-          key: ${{ secrets.HISTAC_KEY }}
-          passphrase: ${{ secrets.HISTAC_PASSPHRASE }}
-          proxy_port: ${{ secrets.HISTAC_PROXY_PORT }}
-          source: "deploy_dev.tar"
-          target: "/usr/share/tomcat/"
-          debug: true  
-      
       - uses: garygrossgarten/github-action-ssh@release
         name: Run the Update MicroFronEnd Script
         with:
@@ -86,14 +68,19 @@ jobs:
             username: ${{ secrets.HISTAC_USERNAME }}
             passphrase: ${{ secrets.HISTAC_PASSPHRASE }}
             privateKey: ${{ secrets.HISTAC_KEY}}
-            port: ${{ secrets.HISTAC_PORT }}
-            proxy_port: ${{ secrets.HISTAC_PROXY_PORT }}
-
+            port: ${{ secrets.HISTAC_PORT }} 
+     
   pre_release:
     runs-on: ubuntu-latest
 
     needs: build
+    
 
+    # Commenting to test feature branch scenario
+    # if: ${{ github.ref == 'dev' }}
+
+    # Adding the feature branch to test the logic before merging
+    # if: ${{ github.ref == 'refs/heads/working' }} 
     if: ${{ github.event_name == 'push' }}
 
     steps:
@@ -112,64 +99,23 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
-  release:
+  working:
     runs-on: ubuntu-latest
 
-    needs: deploy
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: "14.x"
-          registry-url: 'https://registry.npmjs.org'
-      - run: npm install
-      - run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          mkdir ../build
-          cp -TR . ../build
-          tar -cvf deploy_dev.tar ../build/
-      - uses: appleboy/scp-action@v0.1.1
-        name: SCP file via ssh password to Transfer Files Upload Artifacts to DO
-        with: 
-          host: ${{ secrets.DIGITAL_OCEAN_HOST }}
-          username: ${{ secrets.DIGITAL_OCEAN_USERNAME }}
-          port: ${{ secrets.DIGITAL_OCEAN_PORT }}
-          password: ${{ secrets.DIGITAL_OCEAN_PASSWORD }}
-          # key: ${{ secrets.KEY }}
-          source: "deploy_dev.tar"
-          target: "dist_latest"
-          debug: true
-
-  test:
-    runs-on: ubuntu-latest
-
-    needs: deploy
+    needs: pre_release 
     
+    # Adding the feature branch to test the logic before merging
+    # if: ${{ github.ref == 'refs/heads/working' }} 
+    if: ${{ github.event_name == 'push' }}
+
     steps:
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          mkdir ../build
-          cp -TR . ../build
-          tar -cvf deploy_dev.tar ../build/
-      - uses: appleboy/scp-action@v0.1.1
-        name: SCP file via ssh password to Transfer Files Upload Artifacts to DO
-        with: 
-          host: ${{ secrets.HISTAC_HOST }}
-          username: ${{ secrets.HISTAC_USERNAME }}
-          port: ${{ secrets.HISTAC_PORT }}
-#           password: ${{ secrets.HISTAC_PASSWORD }}
-          key: ${{ secrets.HISTAC_KEY }}
-          passphrase: ${{ secrets.HISTAC_PASSPHRASE }}
-          proxy_port: ${{ secrets.HISTAC_PROXY_PORT }}
-          source: "deploy_dev.tar"
-          target: "dist_latest"
-          debug: true     
+      # Update the Microfrontends to reflect what we have in the Working branch
+      - uses: garygrossgarten/github-action-ssh@release
+        name: Run the Update MicroFronEnd Script
+        with:
+            command: cd /usr/share/tomcat/microfrontends/working && sh update_microfrontends.sh
+            host: ${{ secrets.HISTAC_HOST }}
+            username: ${{ secrets.HISTAC_USERNAME }}
+            passphrase: ${{ secrets.HISTAC_PASSPHRASE }}
+            privateKey: ${{ secrets.HISTAC_KEY}}
+            port: ${{ secrets.HISTAC_PORT }} 
