--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,10 +7,11 @@ on:
     branches:
       - '*' 
       # Adding the feature branch to test the logic before merging
-      - feature/ohri-79-development-enviornment 
+      
 
   pull_request:
-    branches: [master]
+    branches: 
+      - '*'
     types: [opened, synchronize, reopened, closed]
   release:
     types:
