--- a/package.json
+++ b/package.json
@@ -66,8 +66,10 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.12.13",
     "@openmrs/esm-framework": "next",
-    "@testing-library/jest-dom": "^5.7.0",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/dom": "^7.20.0",
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.3",
+    "@testing-library/user-event": "^12.0.11",
     "@types/carbon-components-react": "^7.10.9",
     "carbon-components": "^10.19.0",
     "@types/jest": "^24.9.1",
