--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -92,7 +92,7 @@ jobs:
 
     needs: build
     
-    if: ${{ github.ref == 'refs/tags/*' }} 
+    if: startsWith(github.ref, 'refs/tags/v')
 
     steps:
       - uses: actions/checkout@v2
@@ -132,7 +132,7 @@ jobs:
 
     needs: pre_demo 
     
-    if: ${{ github.ref == 'refs/tags/*' }} 
+    if: startsWith(github.ref, 'refs/tags/v')
     
     steps:
       # Update the Microfrontends to reflect what we have in the Working branch
