clean linter errors

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
     "react-scroll": "^1.8.2",
+    "react-waypoint": "^10.1.0",
     "systemjs-webpack-interop": "^1.1.0",
     "yup": "^0.29.1"
   },
