clean linter errors

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "moment": "^2.29.1",
     "react-scroll": "^1.8.2",
     "react-test-renderer": "^16.9.0",
+    "react-waypoint": "^10.1.0",
     "systemjs-webpack-interop": "^1.1.0",
     "yup": "^0.29.1"
   },
