--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Prepare Directory
         shell: bash
         run: |
-          mkdir -p dist/${{ env_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}
+          mkdir -p dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}
           mv dist/*.* dist/${{ env.ESM_NAME }}/${{ env.TIMESTAMP }}_${{ github.sha }}/
           # Runs a set of commands using the runners shell
       - uses: garygrossgarten/github-action-ssh@release
