More work on the modal

--- a/src/ohri-patient-dashboards-config.json
+++ b/src/ohri-patient-dashboards-config.json
@@ -19,5 +19,14 @@
         ]
       }
     }
+  },
+  "@openmrs/esm-patient-banner-app": {
+    "extensions": {
+      "patient-actions-slot": {
+        "remove": [
+          "add-patient-to-patient-list-button"
+        ]
+      }
+    }
   }
 }
